--- a/phoenix-hive/pom.xml
+++ b/phoenix-hive/pom.xml
@@ -110,6 +110,19 @@
       <artifactId>hadoop-minicluster</artifactId>
       <scope>test</scope>
     </dependency>
+          <dependency>
+            <groupId>org.apache.tez</groupId>
+            <artifactId>tez-tests</artifactId>
+            <scope>test</scope>
+            <version>0.8.4</version>
+            <type>test-jar</type>
+          </dependency>
+          <dependency>
+           <groupId>org.apache.tez</groupId>
+    <artifactId>tez-dag</artifactId>
+            <scope>test</scope>
+    <version>0.8.4</version>
+  </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
