--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,7 @@
     <scala.binary.version>2.10</scala.binary.version>
     <calcite.version>1.2.0.2.6.3.0-SNAPSHOT</calcite.version>
     <avatica.version>1.8.0.2.6.3.0-SNAPSHOT</avatica.version>
-
+    <stream.version>2.9.5</stream.version>
     <!-- Test Dependencies -->
     <mockito-all.version>1.8.5</mockito-all.version>
     <junit.version>4.12</junit.version>
@@ -943,6 +943,11 @@
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
         <version>${jodatime.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.clearspring.analytics</groupId>
+        <artifactId>stream</artifactId>
+        <version>${stream.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
