--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.phoenix</groupId>
   <artifactId>phoenix</artifactId>
-  <version>5.0.0-SNAPSHOT</version>
+  <version>5.0.0.3.0.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Apache Phoenix</name>
   <description>A SQL layer over HBase</description>
@@ -44,6 +44,11 @@
       <id>apache release</id>
       <url>https://repository.apache.org/content/repositories/releases/</url>
     </repository>
+    <repository>
+      <id>hwx-public</id>
+      <name>hwx</name>
+      <url>http://nexus-private.hortonworks.com/nexus/content/groups/public/</url>
+    </repository>
   </repositories>
 
   <parent>
@@ -66,13 +71,13 @@
     <top.dir>${project.basedir}</top.dir>
 
     <!-- Hadoop Versions -->
-    <hbase.version>2.0.0-beta-1-SNAPSHOT</hbase.version>
-    <hadoop-two.version>2.7.1</hadoop-two.version>
+    <hbase.version>2.0.0.3.0.0.0-SNAPSHOT</hbase.version>
+    <hadoop-two.version>3.0.0.3.0.0.0-SNAPSHOT</hadoop-two.version>
 
     <!-- Dependency versions -->
     <commons-cli.version>1.2</commons-cli.version>
     <hive.version>1.2.1</hive.version>
-    <hadoop.version>2.7.1</hadoop.version>
+    <hadoop.version>3.0.0.3.0.0.0-SNAPSHOT</hadoop.version>
     <pig.version>0.13.0</pig.version>
     <jackson.version>1.9.2</jackson.version>
     <antlr.version>3.5.2</antlr.version>
