--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
     <!-- Do not change jodatime.version until HBASE-15199 is fixed -->
     <jodatime.version>1.6</jodatime.version>
     <joni.version>2.1.2</joni.version>
-    <avatica.version>1.10.0</avatica.version>
+    <avatica.version>1.10.0.3.0.0.0-SNAPSHOT</avatica.version>
     <jetty.version>9.3.19.v20170502</jetty.version>
     <tephra.version>0.13.0-incubating</tephra.version>
     <spark.version>2.0.2</spark.version>
