--- a/pom.xml
+++ b/pom.xml
@@ -77,8 +77,8 @@
     <top.dir>${project.basedir}</top.dir>
 
     <!-- Hadoop Versions -->
-    <hbase.version>2.0.0.3.0.0.0-SNAPSHOT</hbase.version>
-    <hadoop.version>3.0.0.3.0.0.0-SNAPSHOT</hadoop.version>
+    <hbase.version>2.0.0-beta-2</hbase.version>
+    <hadoop.version>3.0.0</hadoop.version>
 
     <!-- Dependency versions -->
     <commons-cli.version>1.2</commons-cli.version>
