--- a/pom.xml
+++ b/pom.xml
@@ -77,11 +77,11 @@
     <top.dir>${project.basedir}</top.dir>
 
     <!-- Hadoop Versions -->
-    <hbase.version>2.0.0-beta-2</hbase.version>
-    <hadoop.version>3.0.0</hadoop.version>
+    <hbase.version>2.0.0.3.0.0.0-SNAPSHOT</hbase.version>
+    <hadoop.version>3.0.0.3.0.0.0-SNAPSHOT</hadoop.version>
 
     <!-- Dependency versions -->
-    <commons-cli.version>1.2</commons-cli.version>
+    <commons-cli.version>1.4</commons-cli.version>
     <hive.version>3.0.0.3.0.0.0-SNAPSHOT</hive.version>
     <pig.version>0.13.0</pig.version>
     <jackson.version>1.9.2</jackson.version>
@@ -89,7 +89,6 @@
     <log4j.version>1.2.17</log4j.version>
     <slf4j.version>1.6.4</slf4j.version>
     <protobuf-java.version>2.5.0</protobuf-java.version>
-    <commons-configuration.version>1.6</commons-configuration.version>
     <commons-io.version>2.1</commons-io.version>
     <commons-lang.version>2.5</commons-lang.version>
     <commons-logging.version>1.2</commons-logging.version>
@@ -921,6 +920,11 @@
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>${commons-cli.version}</version>
       </dependency>
       <dependency>
         <groupId>commons-logging</groupId>
