--- a/pom.xml
+++ b/pom.xml
@@ -81,8 +81,8 @@
 
     <!-- Dependency versions -->
     <commons-cli.version>1.4</commons-cli.version>
-    <hive.version>3.0.0.3.0.0.0-SNAPSHOT</hive.version>
-    <pig.version>0.16.0.3.0.0.0-SNAPSHOT</pig.version>
+    <hive.version>3.0.0</hive.version>
+    <pig.version>0.13.0</pig.version>
     <jackson.version>1.9.2</jackson.version>
     <antlr.version>3.5.2</antlr.version>
     <log4j.version>1.2.17</log4j.version>
