--- a/pom.xml
+++ b/pom.xml
@@ -109,8 +109,8 @@
     <joni.version>2.1.2</joni.version>
     <avatica.version>1.10.0.3.0.0.0-SNAPSHOT</avatica.version>
     <jetty.version>9.3.19.v20170502</jetty.version>
-    <tephra.version>0.13.0-incubating</tephra.version>
-    <spark.version>2.3.0.3.0.0.0-SNAPSHOT</spark.version>
+    <tephra.version>0.14.0-incubating</tephra.version>
+    <spark.version>2.0.2</spark.version>
     <scala.version>2.11.8</scala.version>
     <scala.binary.version>2.11</scala.binary.version>
     <stream.version>2.9.5</stream.version>
@@ -809,7 +809,7 @@
       </dependency>
       <dependency>
         <groupId>org.apache.tephra</groupId>
-        <artifactId>tephra-hbase-compat-1.3</artifactId>
+        <artifactId>tephra-hbase-compat-2.0</artifactId>
         <version>${tephra.version}</version>
       </dependency>
 
